# blupimania

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  CREDITS  LICENSE  LICENSE.all  README.md  README.translators.md  blupimania.6.ronn
.github/workflows/: build-linux-dynamic.yml
misc/: color.md
misc/image/: conv.sh  genSmaky.sh  mania.xcf
misc/image/xcf/: blupix02.color.door.xcf  blupix02.color.xcf  blupix05.color.xcf  goodbye.xcf
misc/images/: genSmaky.sh
misc/music/: bmx000.mid  bmx001.mid  bmx001.mus  bmx002.mid  bmx002.mus  bmx003.mid  bmx003.mus  bmx004.mid  bmx004.mus  bmx005.mid  bmx005.mus  bmx006.mid  bmx006.mus  bmx007.mid  bmx007.mus  bmx008.mid  bmx009.mid  bmx009.mus  bmx010.mid  bmx010.mus  bmx011.mid  bmx011.mus  bmx012.mid  bmx012.mus  bmx013.mid  bmx013.mus  conv.sh
resources/darwin/: Blupimania  background.tiff  dmgsetup.scpt
resources/icon/: blupi.icns
resources/linux/: application.desktop.in  org.blupi.blupimania.appdata.xml
resources/win32/: blupimania.rc.in
src/: actions.h  blupimania.h  blupix.h  bm.h  bm_decor.c  bm_icon.h  bm_icone.c  bm_move.c  bm_pal.c  bm_play.c  bm_smaky.c  bm_table.c  bm_text.c  config.h.in  decor.c  icon.h  icone.c  in.c  move.c  pal.c  play.c  smaky.c  table.c  text.c
src/sdl/: SDL3_IMG.h  SDL3_IMG_webp.c
